# codetypo

./: .coveragerc  .editorconfig  .gitignore  .gitpod.yml  .mailmap  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .prettierignore  .prettierrc.json  .release-please-manifest.json  .synopkgrc  .tool-versions  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  README.rst  SECURITY.md  action.yml  bin.mjs  bump.py  codeTypo.json  codetypo-dict.txt  codetypo-tools.mjs  codetypo.1  codetypo.1.include  codetypo.code-workspace  codetypo.config.yaml  codetypo.json  codetypo.test.all.json  codetypo.test.base.json  codetypo.test.json  codetypo.test.yarn.json  dictionaries.md  eslint.config.mjs  junit-results.xml  lerna.json  (+15 more)
.github/: CODEOWNERS  FUNDING.yml  README.md  dependabot.yml  issue-auto-comments.yml  pr-branch-labeler.yml  pull_request_template.md  release-drafter-codetypo5.yml  release-drafter.yml  release.yml  settings.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  (+4 more)
action/: entrypoint.sh
benchsuite/: benchsuite.sh
codetypo/: __init__.py  _codetypo.py  _spellchecker.py  _version.py
codetypo-corpus/: .gitattributes  .gitignore  .prettierignore  .release-please-manifest.json  CONTRIBUTORS.md  README.md  SECURITY.md  codeTypo.json  codetypo.config.yaml  dictionaries.md  lerna.json  package.json  pnpm-install.js  publishing.md  release-please-config.json
codetypo-dict-file-checker/: CHANGELOG.md  check.mjs  package.json
crates/codetypo-cli/: Cargo.toml  pyproject.toml
crates/codetypo-cli/benches/: check_file.rs  correct_word.rs  data.rs  tokenize.rs
crates/codetypo-cli/src/: config.rs  default_types.rs  dict.rs  file.rs  lib.rs  policy.rs  report.rs
crates/codetypo-cli/tests/cmd/: assumed-dir-failure.toml  config-disallowed.toml  double-escaped.toml  extend-builtin-dict.toml  extend-exclude-inverted.toml  extend-ignore-identifiers-re-bad.toml  extend-ignore-identifiers-re.toml  extend-ignore-re.toml  extend-words-case.toml  false-positives.toml  file-failure.toml  file-list-stdin.toml  force-exclude.toml  help.toml  ignore-block.toml  ignore-line.toml  missing-arg.toml  missing-config.toml  override-default-type.toml  relative-dir-failure.toml  sarif.toml  ssl-cipher-suite.toml  stdin-correct.toml  stdin-failure-multiwidth.toml  stdin-failure.toml  stdin-success.toml  utf16.toml
crates/codetypo-cli/tests/cmd/file-list-stdin.in/: _codetypo.toml
doc-generator/: README.md  package.json  typedoc.json
docs/: .codetypo.json  .prettierignore  CNAME  README.md  _config.yml  about.md  comparison.md  design.md  github-action.md  index.md  package.json  pre-commit.md  reference.md
examples/: case-sensitive.codetypo.config.yaml  codetypo.config.yaml  codetypo.json  filetype-examples.codetypo.config.yaml  ignore-words-dict.codetypo.config.yaml  patterns.codetypo.config.yaml
generator-codetypo-dicts/: .yo-rc.json  CHANGELOG.md  LICENSE  package.json
integration-tests/: CHANGELOG.md  README.md  codetypo.json  package.json  repo-list.sh
requirements/: requirements-tests.txt
scripts/: build-codetypo-schema.mjs  format.sh  lint.sh  package.json  test.sh  update-contributors.mjs  update-package-json.mjs  update-release-please.mjs
snap/: snapcraft.yaml
static/: contributors.md  footer.md  sponsor.md  tidelift.md
tools/: normalize_spelling.sh
website/: codetypo.config.yaml  docusaurus.config.ts  eslint.config.mjs  package.json
(+1900 files in other folders)
